--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wouter": "^2.11.0"
+    "rome": "^12.1.3",
+    "wouter": "^2.11.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
